PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_VIP_Rebate_Line__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Discount_Rebate__c</fullName>
        <label>Discount Rebate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dollar_Value_From__c</fullName>
        <label>Dollar Value From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dollar_Value_To__c</fullName>
        <label>Dollar Value To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Tier__c</fullName>
        <label>Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Unit_Volume_From__c</fullName>
        <label>Unit Volume From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Unit_Volume_To__c</fullName>
        <label>Unit Volume To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_VIP_Rebate__c</fullName>
        <label>VIP Rebate</label>
        <referenceTo>Phoenix_Bid_VIP_Rebate__c</referenceTo>
        <relationshipLabel>VIP Rebate Lines</relationshipLabel>
        <relationshipName>VIP_Rebate_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>VIP Rebate Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Tier__c</columns>
        <columns>Phoenix_Dollar_Value_From__c</columns>
        <columns>Phoenix_Dollar_Value_To__c</columns>
        <columns>Phoenix_Unit_Volume_From__c</columns>
        <columns>Phoenix_Unit_Volume_To__c</columns>
        <columns>Phoenix_Discount_Rebate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VIP Rebate Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VIP Rebate Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Currency_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Phoenix_VIP_Rebate__r.Phoenix_Type__c) =&apos;Currency&apos;,
OR( NOT(ISNULL(Phoenix_Unit_Volume_From__c) ) , NOT(ISNULL(Phoenix_Unit_Volume_To__c) )  )
)</errorConditionFormula>
        <errorMessage>Please do not enter unit volume  since the rebate type is currency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dollar_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Phoenix_Dollar_Value_From__c  &gt;  Phoenix_Dollar_Value_To__c</errorConditionFormula>
        <errorDisplayField>Phoenix_Dollar_Value_To__c</errorDisplayField>
        <errorMessage>Dollar Value To should be greater than Dollar Value From</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Phoenix_VIP_Rebate__r.Phoenix_Type__c) =&apos;Quantity&apos;,
OR( NOT(ISNULL( Phoenix_Dollar_Value_From__c ) ) , NOT(ISNULL( Phoenix_Dollar_Value_To__c ) ) )
)</errorConditionFormula>
        <errorMessage>Please do not enter dollar values since the rebate type is Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unit_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Phoenix_Unit_Volume_From__c  &gt;  Phoenix_Unit_Volume_To__c</errorConditionFormula>
        <errorDisplayField>Phoenix_Unit_Volume_To__c</errorDisplayField>
        <errorMessage>Unit Volume To should be greater than Unit Volume From</errorMessage>
    </validationRules>
</CustomObject>